add nav sahbi zakariae

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@react-three/fiber": "^9.3.0",
     "@react-three/postprocessing": "^3.0.4",
     "@tailwindcss/vite": "^4.1.13",
+    "framer-motion": "^12.23.22",
     "gsap": "^3.13.0",
+    "motion": "^12.23.22",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "tailwindcss": "^4.1.13",
